--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,10 @@
             <artifactId>selenium-java</artifactId>
             <version>2.48.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>3.5.6</version>
+        </dependency>
     </dependencies>
 </project>
