--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,10 @@
             <artifactId>amqp-client</artifactId>
             <version>3.5.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.1.0</version>
+        </dependency>
     </dependencies>
 </project>
