--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,10 @@
             <artifactId>json-path</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.1</version>
+        </dependency>
     </dependencies>
 </project>
