--- a/src/main/java/uk/co/oaktest/oakTest.yml
+++ b/src/main/java/uk/co/oaktest/oakTest.yml
@@ -2,3 +2,10 @@ template: Hello, %s!
 defaultName: Stranger
 #logging:
 #  level: DEBUG
+server:
+  applicationConnectors:
+  - type: http
+    port: 9000
+  adminConnectors:
+  - type: http
+    port: 9001
