--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,11 @@
             <artifactId>zip4j</artifactId>
             <version>1.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.16.1</version>
+        </dependency>
     </dependencies>
 
 </project>
